fixed UI/UX -When in tablet view (let say for example between 770px and 965px) content from the tweet is overflown When a tweet is long (for example 139 characters). Tweet is overflown out of the container, instead it should be wrapped to next line within the container

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,6 +7,7 @@ header {
   flex-direction: column;
   background-color: #b37f47;
   background-image: url("https://www.transparenttextures.com/patterns/old-wall.png");
+  overflow-wrap: break-word;
   
 }
 
